# cucaracha

./: .gitignore  64  64.asm  Dockerfile  README  README.md  cuca  cucaTest  cucaTest.asm  cucaTestOut  cucaTestOut.asm  cucaracha.cabal  docker-compose.yaml  output.txt  stack.yaml  test.cuca
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/flag-cache/: QuickCheck-2.8.2-689294ba274b5a3ef051e2a1626c397e  alex-3.1.7  cucaracha-0.1.0.0-b1f8e9f9109be6c9fba9f98138cf405d  cucaracha-0.1.0.0-c89280b2feebf7887ed647a114963612  cucaracha-0.1.0.0-ffbabefaaeb923f3ef17de04969002cc  happy-1.19.5  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  random-1.1-bddd14dad36e804462e2232164520f8f  tf-random-0.5-25d1329eed590dd8e86f993637cb2c5e
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/lib/x86_64-osx-ghc-7.10.3/cucaracha-0.1.0.0-FplgUcjuVAy8HMM9qW2uWS/: ASTPrinter.dyn_hi  ASTPrinter.hi  Grammar.dyn_hi  Grammar.hi  Interpreter.dyn_hi  Interpreter.hi  Lexer.hi  Lib.dyn_hi  Lib.hi  Parser.dyn_hi  Parser.hi  Tokens.dyn_hi  Tokens.hi  libHScucaracha-0.1.0.0-FplgUcjuVAy8HMM9qW2uWS-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/lib/x86_64-osx-ghc-7.10.3/cucaracha-0.1.0.0-LSpxeR7IQOh9JvmPVZx5LJ/: Lib.dyn_hi  Lib.hi  libHScucaracha-0.1.0.0-LSpxeR7IQOh9JvmPVZx5LJ-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/pkgdb/: cucaracha-0.1.0.0-9e9cce97d9499590357ac4bda6398ef1.conf  package.cache
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/share/x86_64-osx-ghc-7.10.3/alex-3.1.7/: AlexTemplate  AlexTemplate-debug  AlexTemplate-ghc  AlexTemplate-ghc-debug  AlexTemplate-ghc-nopred  AlexWrapper-basic  AlexWrapper-basic-bytestring  AlexWrapper-gscan  AlexWrapper-monad  AlexWrapper-monad-bytestring  AlexWrapper-monadUserState  AlexWrapper-monadUserState-bytestring  AlexWrapper-posn  AlexWrapper-posn-bytestring  AlexWrapper-strict-bytestring
.stack-work/install/x86_64-osx/lts-6.15/7.10.3/share/x86_64-osx-ghc-7.10.3/happy-1.19.5/: GLR_Base  GLR_Lib  GLR_Lib-ghc  GLR_Lib-ghc-debug  HappyTemplate  HappyTemplate-arrays  HappyTemplate-arrays-coerce  HappyTemplate-arrays-coerce-debug  HappyTemplate-arrays-debug  HappyTemplate-arrays-ghc  HappyTemplate-arrays-ghc-debug  HappyTemplate-coerce  HappyTemplate-ghc
app/: Main.hs
prueba/: ejecutable  ejecutable.asm
src/: ASTPrinter.hs  Assembler.hs  AssemblerHelper.hs  AssemblyPrinter.hs  Compiler.hs  Interpreter.hs  Lexer.x  Parser.y  Precompiler.hs  PrecompilerPrinter.hs  Printer.hs  TypeChecker.hs  TypeCheckerExamples.hs
test/: Spec.hs  SpecCompilerInputFiles.hs  SpecInputFiles.hs  SpecParserInputFiles.hs  SpecTypeChecker.hs
test/inputs/compiler/: test25.input
