name:                cucaracha
version:             0.1.0.0
synopsis:            A programming language made in Haskell using Alex and Happy
description:         Please see README.md
homepage:            https://github.com/alanrodas/cucaracha#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Rodas Bonjour
maintainer:          alanrodas@gmail.com
copyright:           2016 Alan Rodas Bonjour
category:            Web
build-type:          Simple
extra-source-files:  src/Lexer.x, src/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, array, pretty, mtl
  build-tools:         alex, happy
  default-language:    Haskell2010
  exposed-modules:     Lexer, Parser, ASTPrinter, TypeChecker, TypeCheckerExamples

executable cucaracha-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, array, pretty, mtl, cucaracha
  build-tools:         alex, happy
  default-language:    Haskell2010
  exposed-modules:     Lexer, Parser, ASTPrinter, TypeChecker

test-suite cucaracha-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, cucaracha, hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanrodas/cucaracha
